# QRES

./: QRS.py  README.md  analyzer.py  encoder.py  main.py  qres_chunked_compressor.py  qres_compressor.py  qres_core.py  qres_file.py  qres_image.py  qres_text.py
DOCS/: QRES_Academic_Paper.docx  QRES_Pitch_Deck.pptx
qres_rust/: Cargo.toml  readme.md
qres_rust/src/: main.rs
