[package]
name = "qres_rust"
version = "0.1.0"
edition = "2021"
description = "Quantum-Relational Encoding System: Lossless compression with delta encoding, RLO, and chunked zlib"
authors = ["Your Name <your.email@example.com>"]  # Update with your info

[dependencies]
flate2 = "1.0"
bincode = "1.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"